# chat_room_project

./: .gitignore  CMakeLists.txt  README.md  client  database.txt  server
cfg/clients/: first.cfg  second.cfg  third.cfg
cfg/server/: server.cfg
include/: ChatRoom.h  ConfigParser.h  Logger.h  Message.h  TSQueue.h  User.h
src/: ChatRoom.cpp  ConfigParser.cpp  Logger.cpp  Message.cpp  User.cpp  client.cpp  main.cpp  server.cpp
